--- a/project/game/templates/name.html
+++ b/project/game/templates/name.html
@@ -17,7 +17,7 @@
                 <label for="id_username">Nickname:</label>
                 <input type="text" name="username" id="id_username" maxlength="50" required />
             </p>
-            <button type="submit">Play</button>
+            <button type="submit">Next</button>
         </form>
         {% if form.errors %}
         <div style="color: red">
