Feat: 학과/교수 선택 추가

--- a/project/game/templates/main.html
+++ b/project/game/templates/main.html
@@ -10,7 +10,7 @@
         <script>
             const button = document.querySelector('#playButton');
             const moveToStart = () => {
-                window.location.href = "{% url 'start' %}";
+                window.location.href = "{% url 'name' %}";
             };
             button.addEventListener('click', moveToStart);
         </script>
