--- a/project/game/templates/ranking.html
+++ b/project/game/templates/ranking.html
@@ -19,7 +19,6 @@
             </li>
             {% endfor %}
         </ul>
-        <a href="{% url 'start' %}">Home</a>
-        <a href="{% url 'game' %}">Retry</a>
+        <a href="{% url 'start' %}">Retry</a>
     </body>
 </html>
