--- a/project/game/static/game/css/styles.css
+++ b/project/game/static/game/css/styles.css
@@ -30,13 +30,18 @@ html {
 }
 
 .professor {
-    top: 40%; /* 원하는 위치로 조절 */
-    left: 45%; /* 원하는 위치로 조절 */
-    width: 10%;
-    height: 20%;
-    background-color: red; /* Placeholder for professor */
+    top: 10%; /* 원하는 위치로 조절 */
+    left: 42%; /* 원하는 위치로 조절 */
+    width: 300px;
+    height: 400px;
+    /* background-color: red; */
     color: white;
-    text-align: center;
+}
+
+#professorImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 이미지 크기가 div를 벗어나지 않도록 설정 */
 }
 
 .students {
