--- a/project/game/templates/game.html
+++ b/project/game/templates/game.html
@@ -1,15 +1,50 @@
+<!-- game.html -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Professor's Photo</title>
+        <title>교수님 몰래 춤추기</title>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'game/css/styles.css' %}" />
+        <style>
+            audio {
+                display: none;
+            }
+        </style>
     </head>
     <body>
-        <h1>Welcome, {{ current_username }}!</h1>
-        <img src="{{ professor.photo.url }}" alt="Professor's Photo" />
-        <p>{{ professor.name }}</p>
-        <p>{{ professor.department.name }}</p>
-        <a href="{% url 'ranking' %}">Ranking</a>
+        <div class="game-container">
+            <img
+                src="{% static 'game/images/lecture.jpg' %}"
+                alt="Lecture Background"
+                class="background"
+                width="100%"
+                height="100%"
+            />
+            <div class="professor" id="professor" data-photo-url="{{ professor_photo }}">
+                <img id="professorImage" src="{% static 'game/images/professorBack.png' %}" alt="Professor" />
+                <div class="warning-popup" id="warningPopup"></div>
+            </div>
+            <div class="students">
+                <div class="student" id="student1">1</div>
+                <div class="student" id="student2">2</div>
+                <div class="student" id="student3">3</div>
+                <div class="student" id="student4">4</div>
+            </div>
+        </div>
+        <audio id="backgroundMusic">
+            <source src="{% static 'game/audio/민족의 아리아.mp3' %}" type="audio/mpeg" />
+            <source src="{% static 'game/audio/민족의 아리아.ogg' %}" type="audio/ogg" />
+            <source src="{% static 'game/audio/민족의 아리아.wav' %}" type="audio/wav" />
+            Your browser does not support the audio element.
+        </audio>
+        <audio id="alert1">
+            <source src="{% static 'game/audio/alert1.mp3' %}" type="audio/mpeg" />
+        </audio>
+        <audio id="alert2">
+            <source src="{% static 'game/audio/alert2.mp3' %}" type="audio/mpeg" />
+        </audio>
+        <script src="{% static 'game/js/script.js' %}"></script>
     </body>
 </html>
