add: pages/css add

--- a/project/game/templates/ranking.html
+++ b/project/game/templates/ranking.html
@@ -22,3 +22,53 @@
         <a href="{% url 'start' %}">Retry</a>
     </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>교수님 몰래 춤추기 게임</title>
+        <link rel="stylesheet" href="{% static 'css/ranking.css' %}" />
+        <!-- Font Awesome 아이콘 라이브러리 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    </head>
+    <body>
+        <div class="container">
+            <h1 style="color: #2dffa7" ;>Game Over</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nickname</th>
+                        <th>Score</th>
+                        <th>Rank</th>
+                    </tr>
+                </thead>
+                <tbody id="rankingTable">
+                    <!-- JavaScript를 사용하여 랭킹 데이터를 추가 -->
+                </tbody>
+            </table>
+            <div class="bottom">
+                <button onclick="window.location.href='main.html'">메인으로 돌아가기</button>
+                <button onclick="window.location.href='game.html'"><i class="fas fa-redo"></i> 다시하기</button>
+            </div>
+        </div>
+        <script>
+            // 서버로부터 게임 점수 데이터를 가져오는 함수
+            async function fetchGameScores() {
+                try {
+                    const response = await fetch('/api/game_scores/');
+                    const data = await response.json();
+
+                    // 가져온 데이터를 화면에 출력
+                    const gameScoresDiv = document.getElementById('gameScores');
+                    gameScoresDiv.textContent = JSON.stringify(data);
+                } catch (error) {
+                    console.error('Error fetching game scores:', error);
+                }
+            }
+
+            // 페이지 로드 시 게임 점수 데이터를 가져옴
+            window.onload = fetchGameScores;
+        </script>
+    </body>
+</html>
