--- a/project/game/templates/main.html
+++ b/project/game/templates/main.html
@@ -4,9 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="{% static "css/main.css" %}">
     </head>
     <body>
-        <button id="playButton" class="playButton" type="button">Play</button>
+        <div class="container">
+            <h1>교수님 <span class="rotate">몰래</span> 춤추기 게임</h1>
+            <div class="speech-bubble">
+                <p class="blinking-text">Play Now!</p>
+            </div>
+            <button id="playButton" type="button">Play</button>
+        </div>
         <script>
             const button = document.querySelector('#playButton');
             const moveToStart = () => {
