--- a/project/game/templates/name.html
+++ b/project/game/templates/name.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {% load static %}
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="{% static 'game/css/start.css' %}" />
         <title>Document</title>
     </head>
     <body>
         <h1>Add User</h1>
         {% comment %} 한번 로그인했으면 {% endcomment %} {% if logged_in %}
         <p>Welcome back, {{ username }}!</p>
-        <a>Continue to Game</a>
+        <a href="{% url 'game' %}">Continue to Game</a>
         {% comment %} 다시 설정바꾸고 싶으면 {% endcomment %} {% else %}
         <form action="{% url 'add_user' %}" method="post">
             {% csrf_token %}
@@ -17,7 +19,7 @@
                 <label for="id_username">Nickname:</label>
                 <input type="text" name="username" id="id_username" maxlength="50" required />
             </p>
-            <button type="submit">Next</button>
+            <button type="submit">NEXT</button>
         </form>
         {% if form.errors %}
         <div style="color: red">
