--- a/project/game/static/game/css/styles.css
+++ b/project/game/static/game/css/styles.css
@@ -30,57 +30,35 @@ html {
 }
 
 .professor {
-    top: 40%; /* 원하는 위치로 조절 */
+    top: 30%; /* 원하는 위치로 조절 */
     left: 45%; /* 원하는 위치로 조절 */
-    width: 10%;
-    height: 20%;
+    width: 25vw;
+    height: 45vh;
     background-color: red; /* Placeholder for professor */
     color: white;
     text-align: center;
+    z-index: 1; /* 교수님을 배경 이미지보다 앞으로 */
 }
 
 .students {
     bottom: 10%;
     left: 10%;
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
 }
 
-.student {
-    width: 10%;
-    height: 20%;
-    background-color: blue; /* Placeholder for students */
-    color: white;
-    text-align: center;
-}
-
-/* 각각의 학생 위치 조정 */
-#student1 {
-    bottom: 20%; /* 원하는 위치로 조절 */
-    left: 9%; /* 원하는 위치로 조절 */
-}
-
-#student2 {
-    bottom: 20%; /* 원하는 위치로 조절 */
-    left: 42.5%; /* 원하는 위치로 조절 */
-}
-
-#student3 {
-    bottom: 20%; /* 원하는 위치로 조절 */
-    left: 60%; /* 원하는 위치로 조절 */
-}
-
-#student4 {
-    bottom: 20%; /* 원하는 위치로 조절 */
-    left: 80%; /* 원하는 위치로 조절 */
+.student img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .warning-popup {
     display: none;
     position: absolute;
-    bottom: 110%; /* 교수님 위에 뜨도록 조정 */
-    left: 50%;
+    bottom: 90%; /* 교수님 위에 뜨도록 조정 */
+    left: 45%;
     transform: translateX(-50%);
     background-color: white;
     border: 2px solid black;
@@ -120,4 +98,23 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1; /* 배경 이미지의 z-index 설정 */
+}
+
+#student1.student {
+    top: 290px;
+    left: -10px;
+    width: 30%;
+}
+
+#student2.student {
+    top: 290px;
+    left: 490px;
+    width: 30%;
+}
+
+#student4.student {
+    top: 295px;
+    right: 55px;
+    width: 30%;
 }
